--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     color: #f6f6f6;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
-    overflow: hidden;
+
 }
 
 a {
@@ -100,7 +100,7 @@ a {
         transform: translateY(0%);
     }
     50% {
-        transform: translateY(-10%);
+        transform: translateY(-12%);
     }
     100% {
         transform: translateY(0%);
@@ -275,6 +275,95 @@ a {
     cursor: pointer;
 }
 
+/* About.html CSS */
+.about {
+    display: flex ;
+    justify-content: space-around;
+    align-items: center;
+    height: 100vh;
+}
+
+.about .pic img {
+    margin-top: 7vh;
+    margin-left: 8vh;
+    width: 350px;
+}
+.about .background {
+    width: 350px;
+    height: 540px;
+    background-color: #e78b21;
+    margin-left: 12vh;
+    margin-top: 12vh;
+    margin-right: 25vh;
+}
+
+.about .content {
+    margin-right: 15vh;
+    margin-top: 6vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.about .content h1 {
+    font-family: 'Lobster', cursive;
+    /* margin-top: -16% */
+   
+}
+
+.about .content p {
+    margin-top: 4%;
+}
+
+.footer {
+    background-color: #d7660a;
+    width: 100%;
+    height: 40vh;
+    margin-top: 6%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+/* 
+.footer .pic {
+margin-right: 0%;
+  
+} */
+.footer .content1 h2 {
+    margin-top: -10%;
+    margin-bottom: 10%;
+}
+
+.footer .content1 .icon {
+   font-size: 32px; 
+}
+
+.footer .content1 .icon i {
+    padding-right: 3%;
+    transition: all 200ms;
+}
+
+.footer .content2 {
+    margin-top: 3.5%;
+}
+
+.footer .name {
+    margin-top: 2%;
+}
+
+.footer .pic img {
+    width: 150px;
+    border-radius: 20%;
+    /* clip-path: circle(50%); */
+}
+
+.footer .content1 .icon i:hover {
+    cursor: pointer;
+   transform: scale(1.2);
+}
+
+/* for Responsive styling */
 @media screen and (max-width:768px){
     .navbar {
         padding: 20px 20px;
@@ -291,6 +380,43 @@ a {
     .hero .text {
         font-size: 42px;
     }
+
+
+    /* About page */
+    .about {
+        display: flex ;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .about .pic img {
+      
+        margin-left: 7vh;
+        clip-path: polygon(100% 40%, 100% 90%, 0% 90%, 0 40%);
+        width: 450px;
+        margin-top: -42%;
+    }
+    .about .background {
+        width: 480px;
+        height: 370px;
+        background-color: #e78b21;
+        margin: 15vh 10vh 0 10vh;
+    }
+    
+    .about .content {
+        /* margin-right: 15vh; */
+        margin-top: 6vh;
+        margin: 10% 8% 5% 12%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        /* width: 500px; */
+    }
+    
+
+
 }
 
 @media screen and (max-width:640px) {
@@ -354,63 +480,3 @@ a {
 }
 
 
-/* About.html CSS */
-.about {
-    display: flex ;
-    justify-content: space-around;
-    align-items: center;
-    height: 100vh;
-}
-
-.about .pic img {
-    margin-top: 7vh;
-    margin-left: 8vh;
-    width: 350px;
-}
-.about .background {
-    width: 350px;
-    height: 540px;
-    background-color: #e78b21;
-    margin-left: 12vh;
-    margin-top: 12vh;
-    margin-right: 25vh;
-}
-
-.about .content {
-    margin-right: 15vh;
-    margin-top: 6vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.about .content h1 {
-    font-family: 'Lobster', cursive;
-    /* margin-top: -16% */
-   
-}
-
-.about .content p {
-    margin-top: 4%;
-}
-
-.footer {
-    background-color: #d7660a;
-    width: 100%;
-    height: 40vh;
-    margin-top: 6%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.footer .pic {
-margin-right: -10%;
-  
-}
-
-.footer .pic img {
-    width: 200px;
-    clip-path: circle(50%);
-}
